Leverage the font-display CSS feature to ensure text is user-visible while webfonts are loading.
https://developers.google.com/speed/pagespeed/insights/?url=https%3A%2F%2Fjustanothergeek.chdir.org

--- a/themes/hugo-ink/static/css/main.css
+++ b/themes/hugo-ink/static/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Inter';
-    font-display: auto;
+    font-display: swap;
     font-style:  normal;
     font-weight: 400;
     src: url("https://rsms.me/inter/font-files/Inter-Regular.woff2") format("woff2"),
@@ -9,7 +9,7 @@
   
   @font-face {
     font-family: 'Inter';
-    font-display: auto;
+    font-display: swap;
     font-style:  normal;
     font-weight: 500;
     src: url("https://rsms.me/inter/font-files/Inter-Medium.woff2") format("woff2"),
